# surfing_AI

./: .gitignore  .mcp.json  AGENTS.md  LICENSE  README.md  package.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.codex/: config.toml
agents/: surfing-builder.md  surfing-explorer.md  surfing-verifier.md
cardnews-solo-founder/: README.md  content.py  generate.py  index.html  render.sh  style.css
cli/: ask.py  ask_experiment.py  reverse_questions.json  surfing-ai.js
config/: example_private_mode.yaml  example_release_blocklist.yaml  model_validation.yaml
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docs/: CLI_INSTALL.md  DESKTOP_APP.md  TERMINAL_PRIVATE_MODE.md
harness/: __init__.py  agent_fleet.py  approval_queue.py  audit_log.py  autopilot.py  backend_doctor.py  backend_health.py  bg_jobs.py  budget.py  capability_registry.py  chat_agent.py  connections.py  context_reducer.py  coupled_approval_guard.py  desktop_bridge.py  expert_fusion.py  file_access_guard.py  hidden_state_refiner.py  micro_task_gate.py  multi_agent.py  plugin_bridge.py  private_leak_guard.py  process_orchestrator.py  public_release_guard.py  reduction_audit.py  refinement_loop.py  release_package.py  router.py  safety_barrier.py  scrape_resilience_scan.py  security_gauge.py  small_agent.py  state.py  system_identity.py  terminal_private_mode.py  thread_budget.py  tmux_adapter.py  trace.py  validator.py  web_app.py  (+1 more)
packaging/: INSTALL.txt  desktop_entry.py  launch.bat  launch.command  (+1 more)
(+86 files in other folders)
