[project]
name = "verification-gated-local-agent-harness"
version = "0.1.0"
description = "A verification-gated local agent harness for routing developer tasks across small agents, coding agents, deterministic tools, reviewers, and human approval gates."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
