[project]
name = "surfing-ai-agent-router"
version = "0.1.0"
description = "A local multi-agent router for coordinating Antigravity, Codex, and Claude with verification and approval gates."
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Sunghoon Park" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
